Fixed overflow-x to avoid horizontal scroll

--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -28,6 +28,13 @@
 
 .questions {
     color: var(--text-linen);
+
+}
+
+.question {
+    color: orangered;
+    font-size: 2rem;
+
 }
 
 .questions::first-letter {
